<resources>
    <string name="app_name" translatable="false">LifeIsBetter</string>
    <string name="mailbox">Mailbox</string>
    <string name="write_mail">Write mail</string>
    <string name="profile">Profile</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_password_error">Passwords that you\'ve written are not the same</string>
    <string name="user_exists_error">User with this email address already exists</string>
    <string name="invalid_login_or_password_error">Invalid login or password</string>
    <string name="weak_password_error">Your password is too weak</string>
    <string name="wrong_email_format_error">Your email is written in wrong format</string>
    <string name="success">Success!</string>
    <string name="blank_message">Your message must not be blank</string>
    <string name="empty_mailbox">Your mailbox is empty now..</string>
    <string name="network_connection_problem">Network connection problem</string>
</resources>