<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <View
        android:id="@+id/signInTopBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?colorSecondary"
        android:transitionName="SignTopBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signInMailImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_mail"
        android:tint="?colorOnSecondary"
        android:transitionName="signImage"
        app:layout_constraintBottom_toBottomOf="@id/signInTopBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signInTopBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signInText"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:textColor="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInMailImage" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@id/signInText"
        app:layout_constraintStart_toStartOf="@id/signInText"
        app:layout_constraintTop_toBottomOf="@id/signInText" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signInCard"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="signCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:constraint_referenced_ids="signInEmailLayout, signInPasswordLayout"
                app:flow_verticalStyle="spread" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:hintTextColor="?colorOnSecondary"
                app:startIconDrawable="@drawable/ic_email">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInEmailEditText"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:hintTextColor="?colorOnSecondary"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInPasswordEditText"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/signInFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="signInGoToSignUpHelpText, signInGoToSignUpButton"
        app:flow_horizontalStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInCard" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signInGoToSignUpHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInGoToSignUpButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?colorPrimaryVariant"
        app:rippleColor="?colorPrimary"
        app:strokeWidth="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.ProgressIndicator
        style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
        android:id="@+id/signInLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:indicatorColor="?colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>