<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:clipChildren="false">

    <View
        android:id="@+id/signUpTopBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?colorSecondary"
        android:transitionName="signTopBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/signUpBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?actionBarItemBackground"
        android:foreground="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signUpMailImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="19dp"
        android:src="@drawable/ic_welcome"
        android:tint="?colorOnSecondary"
        android:transitionName="signImage"
        app:layout_constraintBottom_toTopOf="@+id/signUpCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signUpTopBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUpText"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMailImage" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@id/signUpText"
        app:layout_constraintStart_toStartOf="@id/signUpText"
        app:layout_constraintTop_toBottomOf="@id/signUpText" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signUpCard"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_margin="16dp"
        android:transitionName="signCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:constraint_referenced_ids="signUpEmailLayout, signUpPasswordLayout, signUpConfirmPasswordLayout"
                app:flow_verticalStyle="spread" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:hintTextColor="?colorOnSecondary"
                app:startIconDrawable="@drawable/ic_email">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailEditText"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:hintTextColor="?colorOnSecondary"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPasswordEditText"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpConfirmPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:hintTextColor="?colorOnSecondary"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_confirm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpConfirmPasswordEditText"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>